--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Plus Exp is a gamified daily task planner" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <title>Plus Exp</title>
+  <title>Plus Exp!</title>
 </head>
 
 <body>
